--- a/style.css
+++ b/style.css
@@ -1,7 +1,24 @@
 .visible {
-    display: block;
- }
- 
- .hidden {
-    display: none;
- }
+   display: block;
+}
+
+.hidden {
+   display: none;
+}
+
+h1, h2 {
+   margin: 20px 0;
+}
+
+a {
+   color: #007bff;
+   text-decoration: none;
+}
+
+a:hover {
+   text-decoration: underline;
+}
+
+.page {
+   margin: 20px;
+}
